<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_currency_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/ll_currency_list_header"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:background="#cfd8dc"
        app:layout_constraintBottom_toTopOf="@+id/swipeRefreshLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_header_currency_char_code"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="left|center_vertical"
            android:text="@string/header_currency_char_code" />

        <TextView
            android:id="@+id/tv_header_currency_nominal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="30dp"
            android:layout_weight="1"
            android:fontFamily="@font/roboto"
            android:gravity="left|center_vertical"
            android:text="@string/header_currency_nominal" />

        <TextView
            android:id="@+id/tv_header_currency_rate"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:fontFamily="@font/roboto"
            android:gravity="right |center_vertical"
            android:text="@string/header_currency_rate" />

    </LinearLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_currency_convert_block"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_currency_list_header">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_currency_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent"
            tools:listitem="@layout/recyclerview_item" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ll_currency_convert_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#cfd8dc"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/swipeRefreshLayout">


        <TextView
            android:id="@+id/tv_convert_block_header"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/roboto"
            android:gravity="left"
            android:text="@string/converter_header"
            app:layout_constraintBottom_toTopOf="@+id/ll_field_block"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/sp_currency_items"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ll_field_block"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/bt_convert_currency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_convert_block_header">

            <EditText
                android:id="@+id/et_sum_field_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/hint_sum_field"
                android:inputType="numberDecimal" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/arrow_left_right" />

            <EditText
                android:id="@+id/et_convert_result"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:hint="@string/default_value_sum_field"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/bt_convert_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/btn_convert_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_field_block" />

        <Spinner
            android:id="@+id/sp_currency_items"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"

            app:layout_constraintBottom_toTopOf="@+id/ll_field_block"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_convert_block_header"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>